# cg2all-pyg

./: .gitignore  README.md  pyproject.toml
cg2all/: __init__.py
cg2all/lib/: __init__.py  check_rigid_groups.py  generate_rigid_body.py  get_ic_from_structure.py  graph.py  libcg.py  libcryoem.py  libdata.py  libloss.py  libmetric.py  libmodel.py  libpdb.py  libpdbname.py  libter.py  pdbfile.patch  residue_constants.py  residue_constants_base.py  snippets.py
cg2all/lib/se3/: __init__.py  basis.py  fiber.py  snippets.py  transformer.py  utils.py
cg2all/lib/se3/layers/: __init__.py  attention.py  convolution.py  linear.py  norm.py
cg2all/script/: convert_all2cg.py  convert_cg2all.py  cryo_em_minimizer.py
tests/regression/: test_convert_cg2all.py  test_graph_shim.py
tests/regression/golden/: 1jni_CA_DCD.dcd
